--- a/config/.env
+++ b/config/.env
@@ -1,12 +1,12 @@
-ATLAS_URI=mongodb+srv://Mdasraful:2ngeb88LzM5zAH0t@mymainportfolio.akqfrho.mongodb.net/portfolio?retryWrites=true&w=majority
+ATLASURI=mongodb+srv://Mdasraful:2ngeb88LzM5zAH0t@mymainportfolio.akqfrho.mongodb.net/portfolio?retryWrites=true&w=majority
 PORT = 8080
 SECRET=portfolio123byiasraful
-TOKEN_EXP = 7d
-COOKIE_EXP = 7
+TOKENEXP = 7d
+COOKIEEXP = 7
 
-CLOUD_NAME=dhmfp54oe
-CLOUD_API_KEY=974531753451581
-CLOUD_API_SECRET=wqN0qrMQm8s29wtsD4C-LBtx2u8
+CLOUDNAME=dhmfp54oe
+CLOUDAPIKEY=974531753451581
+CLOUDAPISECRET=wqN0qrMQm8s29wtsD4C-LBtx2u8
 
 
 
